[package]
name = "flooder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest-impersonate = { version = "*", features = ["cookies", "json"] }
rand = "0.8"
colored = "*"

[profile.release]
codegen-units = 1
strip = true
opt-level = "z"
lto = true
panic = "abort"
